# synapse-core

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ios.yml  windows.yml
crates/synapse-core/: Cargo.toml
crates/synapse-core-ffi/: Cargo.toml
crates/synapse-core-ffi/src/: lib.rs
crates/synapse-core-py/: Cargo.toml  pyproject.toml
crates/synapse-core-py/src/: lib.rs
crates/synapse-core/examples/: crdt_spike.rs  dlopen_probe.rs  embed_cli.rs  golden_replay.rs  ort_probe.rs
crates/synapse-core/src/: actions.rs  decay.rs  digest.rs  embedder.rs  lib.rs  llm.rs  migrate.rs  pairing.rs  resources.rs  routing.rs  schema.rs  snapshot.rs  sql.rs  storage.rs  summaries.rs  sync.rs
crates/synapse-core/tests/: sync_convergence.rs
prompts/: classifier.md  digest.md  manifest.json  project-refinement.md  project-summary.md  resource-summary.md  resummary.md
scripts/: build-android.sh
scripts/ci/: compare_vectors.py
tools/: gen_reference_vectors.py  parity_check.py
