[workspace]
resolver = "2"
members = [
    "crates/synapse-core",
    "crates/synapse-core-py",
    "crates/synapse-core-ffi",
]
# synapse-core-py links against libpython symbols resolved at import time and
# must be built through maturin (which passes -undefined dynamic_lookup).
default-members = [
    "crates/synapse-core",
    "crates/synapse-core-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/alexisraitano/synapse-core"

[workspace.dependencies]
synapse-core = { path = "crates/synapse-core" }
fastembed = { version = "5.17", default-features = false }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
# bundled: the same SQLite compiled into the core on every platform (macOS,
# Android, iOS), instead of whatever the OS ships.
rusqlite = { version = "0.40", features = ["bundled", "load_extension"] }
# Hard pin to the exact version the Python backend loads (pip sqlite-vec
# 0.1.9): both sides touch the same vec0 tables during the migration.
# (0.1.10-alpha.4 also ships a broken crate tarball: missing diskann source.)
sqlite-vec = { version = "=0.1.9" }

[profile.release]
lto = true
strip = true
