[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "synapse-core"
description = "Synapse shared Rust core (embeddings), PyO3 binding for the desktop host."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dynamic = ["version"]

[tool.maturin]
module-name = "synapse_core"
