[package]
name = "synapse-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Synapse shared core: embeddings, storage, routing, decay. One compiled brain for desktop and mobile."

[features]
# Desktop hosts (macOS/Windows): ort downloads a prebuilt onnxruntime at build time.
default = ["ort-download"]
ort-download = ["fastembed/ort-download-binaries"]
# Mobile targets (Android/iOS): onnxruntime is shipped by the app and loaded dynamically.
ort-dynamic = ["fastembed/ort-load-dynamic"]

[dependencies]
fastembed = { workspace = true }
thiserror = { workspace = true }
serde_json = "1"

[dev-dependencies]
# Same ort that fastembed uses; only for the ort_probe bisect example.
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std"] }
libloading = "0.9"
backtrace = "0.3"
libc = "0.2"
