[package]
name = "synapse-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Synapse shared core: embeddings, storage, routing, decay. One compiled brain for desktop and mobile."

[features]
# Desktop hosts (macOS/Windows): ort downloads a prebuilt onnxruntime at build time.
default = ["ort-download"]
ort-download = ["fastembed/ort-download-binaries"]
# Mobile targets (Android/iOS): onnxruntime is shipped by the app and loaded dynamically.
ort-dynamic = ["fastembed/ort-load-dynamic"]

[dependencies]
fastembed = { workspace = true }
thiserror = { workspace = true }
# preserve_order: Python dict insertion order shapes JSON bytes that get
# embedded (attributes in entity_embedding_text) — BTreeMap would reorder.
serde_json = { version = "1", features = ["preserve_order"] }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
uuid = { workspace = true }
# Blocking HTTP for the classifier call; rustls so Android needs no OpenSSL.
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
# Naive UTC timestamp math for decay (SYN-19) — no clock/tz features needed.
chrono = { version = "0.4", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3"
# Same ort that fastembed uses; only for the ort_probe bisect example.
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std"] }
libloading = "0.9"
backtrace = "0.3"
libc = "0.2"
