[package]
name = "synapse-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Synapse shared core: embeddings, storage, routing, decay. One compiled brain for desktop and mobile."

[features]
# Desktop hosts (macOS/Windows): ort downloads a prebuilt onnxruntime at build time.
default = ["ort-download"]
ort-download = ["fastembed/ort-download-binaries"]
# Mobile targets (Android/iOS): onnxruntime is shipped by the app and loaded dynamically.
ort-dynamic = ["fastembed/ort-load-dynamic"]

[dependencies]
fastembed = { workspace = true }
tokenizers = { workspace = true }
thiserror = { workspace = true }
# preserve_order: Python dict insertion order shapes JSON bytes that get
# embedded (attributes in entity_embedding_text) — BTreeMap would reorder.
serde_json = { version = "1", features = ["preserve_order"] }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
uuid = { workspace = true }
# Blocking HTTP for the classifier call; rustls so Android needs no OpenSSL.
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
# Naive UTC timestamp math for decay (SYN-19) — no clock/tz features needed.
chrono = { version = "0.4", default-features = false, features = ["std"] }
# SYN-128 pairing channel: authenticated ECDH (the QR secret is the
# authenticator) → HKDF → AEAD. Mature crates, one implementation for the
# 3 platforms. `getrandom` backs ephemeral key + nonce generation.
x25519-dalek = { version = "2", features = ["getrandom", "static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
getrandom = "0.2"
base64ct = { version = "1", features = ["alloc"] }
# SYN-137 Mac↔Mac pairing: PAKE on the 6-digit code (offline brute-force
# impossible by construction) + HMAC key confirmation so the member can
# count and cap online attempts.
spake2 = "0.4"
hmac = "0.12"

[dev-dependencies]
tempfile = "3"
# Same ort that fastembed uses; only for the ort_probe bisect example.
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std"] }
libloading = "0.9"
backtrace = "0.3"
libc = "0.2"
